--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# System Configuration
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -14,3 +15,10 @@ spring:
 server:
   port: 8080
   context-path: /
+
+# Custom Configuration
+custom:
+  serverHost: http://6dc67abf.ngrok.io
+  githubClientId: 384bd7c1472f8f66807d
+  githubClientSecret: 8dbb5c28d0bdcac525e0ad13c508442fbb91a3e9
+  githubAuthorizationScopes: user:email,repo
