--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,13 +12,17 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  mvc:
+    view:
+      prefix: classpath:/templates/
+      suffix: .html
 server:
   port: 8080
   context-path: /
 
 # Custom Configuration
 custom:
-  serverHost: http://a9a6ab08.ngrok.io
+  serverHost: http://9573f730.ngrok.io
   githubClientId: 384bd7c1472f8f66807d
   githubClientSecret: 8dbb5c28d0bdcac525e0ad13c508442fbb91a3e9
   githubAuthorizationScopes: user:email,repo
