--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/easy_ci_platform?useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/easy_ci_platform?useSSL=false&useUnicode=true&characterEncoding=utf-8
     username: root
     password: root
   jpa:
