--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,8 @@ server:
 
 # Custom Configuration
 custom:
-  serverHost: http://0a7d8ce0.ngrok.io
+  serverHost: http://6629e695.ngrok.io
   githubClientId: 384bd7c1472f8f66807d
   githubClientSecret: 8dbb5c28d0bdcac525e0ad13c508442fbb91a3e9
   githubAuthorizationScopes: user:email,repo
+  pluginScriptPath: /home/lpy/IdeaProjects/easy-ci-plugin/script/
